--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
         }
     },
     "require": {
-        "php": ">=5.3.3",
-        "symfony/yaml": ">=2.3.0"
+        "php": ">=8.1",
+        "symfony/yaml": "^6.2"
     },
     "require-dev": {
-        "atoum/atoum": "~1"	
+        "atoum/atoum": "~1"
     }
 }
